# dnf-param-search

./: .gitignore  FAQs.docx  README.md  candidate_dnf_config.yaml  candidate_metrics.json  motpe_search.py  requirements.txt  toy_eval.py
configs/: certification.yaml  config.yaml  datasets.yaml
core/: dft_core.py  projectors.py
cpp/: CMakeLists.txt  main.cpp
cpp/search/: dnf_motpe_search.cpp  dnf_nsga_search.cpp  nsga2.cpp  nsga2.hpp
playground/cpp_py_dummy/: config.txt  result.txt  toy_eval.py  toy_main.cpp
playground/dnf_params_test/: dnf_params.cpp  dnf_params.hpp  test_dnf_params.cpp
playground/toy_search_pipeline/: candidate_config.yaml  candidate_dnf_config.yaml  candidate_metrics.json  metrics.json  params.json  toy_config.yaml  toy_eval.py  toy_result.txt  toy_search.cpp
python_env/: bb_config.py  bb_core.py  bb_metrics.py  bb_pack.py  bb_report.py  bb_run.py  dnf_eval_wrapper.py  run_ycb_eval.py
python_env/adapters/: __init__.py  base.py  registry.py
python_env/adapters/dvs_grasping/: loader.py
python_env/adapters/ycbsight/: loader.py  mapper.py
